--- a/Glance Prototype A/GLAMainWindowController.xib
+++ b/Glance Prototype A/GLAMainWindowController.xib
@@ -4,7 +4,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="GLAPrototypeBWindowController">
+        <customObject id="-2" userLabel="File's Owner" customClass="GLAMainWindowController">
             <connections>
                 <outlet property="barHolderView" destination="IAs-3U-KCq" id="IT5-dV-eTk"/>
                 <outlet property="contentView" destination="lUf-gC-iRj" id="77L-qi-CZf"/>
@@ -13,9 +13,9 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" animationBehavior="default" id="F0z-JX-Cv5">
+        <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" animationBehavior="default" id="F0z-JX-Cv5" customClass="GLAMainWindow">
             <windowStyleMask key="styleMask" resizable="YES"/>
-            <windowCollectionBehavior key="collectionBehavior" moveToActiveSpace="YES"/>
+            <windowCollectionBehavior key="collectionBehavior" canJoinAllSpaces="YES"/>
             <windowPositionMask key="initialPositionMask" topStrut="YES"/>
             <rect key="contentRect" x="488" y="198" width="500" height="310"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1440" height="878"/>
